Fix navbar jumping around

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -166,6 +166,10 @@ span.navbar-text {
   /* min-width: 300px !important; */
 }
 
+.social-icon {
+  min-width: 150px;
+}
+
 .social-icon a img {
   width: 50%;
   z-index: 1;
